# API_project_2022

./: CMakeLists.txt  README.md  Upto30.c  eseguibile  fine  main  main.c  out  outputfile  prova.cpp  prova.h  test.txt
inputTest/: test.txt
